--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<meta charset="utf-8">
-		<title>Lorem ipsum dolor</title>
+		<link rel="shortcut icon" href="favicon.gif" type="image/x-icon">
+		<title>Playa Vista Caregivers</title>
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 	</head>
@@ -16,12 +17,16 @@
 				<li>in metus</li>
 				<li>rutrum</li> 
 			</ol>
-		<p>scelerisque turpis sed, congue turpis. Duis egestas ex eget maximus hendrerit. Mauris eget orci eu quam viverra dapibus efficitur interdum elit. In non viverra nunc. Suspendisse turpis quam, tempus a rhoncus non, auctor quis ante. Phasellus molestie bibendum turpis, a imperdiet velit finibus vitae. </p>
+		<p>scelerisque turpis sed, <em>congue</em> <strong>turpis</strong>. Duis egestas ex eget maximus hendrerit. Mauris eget orci eu quam viverra dapibus efficitur interdum elit. In non viverra nunc. Suspendisse turpis quam, tempus a rhoncus non, auctor quis ante. Phasellus molestie bibendum turpis, a imperdiet velit finibus vitae. </p>
 
 		<p>Vestibulum vel consectetur justo. Mauris aliquam ipsum non scelerisque sollicitudin. Nam hendrerit, dui ac venenatis pretium, urna libero scelerisque dolor, vitae ultricies diam erat vitae erat. Nulla elementum nisl in tellus venenatis, et posuere sapien maximus. Nam aliquet nunc ut lacus euismod porttitor. Proin ut viverra ipsum, cursus sollicitudin odio. Phasellus vel pharetra mi. Ut consectetur dui vitae libero ultrices eleifend. Nam condimentum lacus ut velit faucibus maximus. Suspendisse id vehicula arcu. Curabitur facilisis est quis purus pharetra aliquet. Nullam a enim enim. Mauris varius porta ornare. Maecenas ac tincidunt diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
 
-		<a href="https://github.com/capncanuck/playa-vista"><h2>Source Code Available</h2></a>
+		<a href="https://github.com/capncanuck/playa-vista" title='The Badass Code'><h2>Source Code Available</h2></a>
 		<button>Change user</button>
+
+<p>The quote element — <code>&lt;q&gt;</code> — is <q cite="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/q">intended
+for short quotations that don't require paragraph breaks.</q></p>
+
 		<script type="text/javascript" src="scripts/main.js"></script>
 	</body>
 </html>
